# rust-ddd-example

./: .env  Cargo.toml  README.md
app/: Cargo.toml
app/src/: db.rs  lib.rs
app/src/entities/: mod.rs  user.rs  user_sql.rs
cli/: Cargo.toml
cli/src/: main.rs
docker/: docker-compose.yml
http-api/: Cargo.toml
http-api/src/: main.rs
migrations/: 20240125122581_users.sql
src/: db.rs  main.rs
src/application/entities/: user.rs
